# cocos-engine

./: .eslintrc.yaml  EngineErrorMap.md  README.md  cc.config.json  package-lock.json  package.json  tsconfig.json  typedoc-index.ts
.github/workflows/: build-wasm-libs.yml  generate-emsdk-cache.yml  generate-oh-sdk-cache.yml  llvm.sh  native-compile-linux.yml  native-compile-platforms.yml  native-compile-webgpu.yml  native-linter-android.yml  native-simulator.yml  package-size-check.js  web-interface-check.yml
@types/: box2d-jsb.d.ts  jsb.d.ts  webGPU.d.ts
@types/pal/: input.d.ts
cocos/: root.jsb.ts  root.ts
cocos/2d/: index.ts
cocos/animation/: animation-clip.ts  animation-component.ts  animation-manager.ts
cocos/audio/: audio-clip.ts  audio-manager.ts
cocos/core/: deprecated.ts  global-exports.ts  internal-index.ts  scheduler.ts  settings.ts  system.ts
cocos/dragon-bones/: ArmatureDisplay.ts  ArmatureSystem.ts  CCArmatureDisplay.ts  CCFactory.ts  DragonBonesAsset.ts
cocos/game/: director.ts  game.ts  splash-screen.ts
cocos/gfx/: device-manager.ts
cocos/input/: input.ts
cocos/misc/: camera-component.ts  model-renderer.ts  renderer.ts
cocos/native-binding/: decorators.ts  impl.ts  index.ts
cocos/particle/: billboard.ts  burst.ts  enum.ts  particle-culler.ts  particle-general-function.ts  particle-system.ts
cocos/particle-2d/: motion-streak-2d-assembler.ts  motion-streak-2d.ts  particle-simulator-2d.ts  particle-system-2d.ts  png-reader.ts  tiff-reader.ts
cocos/primitive/: primitive.ts
cocos/profiler/: profiler.ts
cocos/render-scene/: index.ts
cocos/rendering/: define.ts  geometry-renderer.ts  instanced-buffer.ts  pipeline-scene-data-utils.ts  pipeline-scene-data.ts  pipeline-state-manager.ts  pipeline-ubo.ts  render-pipeline.ts  scene-culling.ts
cocos/scene-graph/: component-scheduler.ts  component.ts  deprecated.ts  layers.ts  node-activator.ts  node-dev.ts  node-enum.ts  node-event-processor.ts  node-ui-properties.ts  node.jsb.ts  node.ts  scene-globals.ts  scene.ts
cocos/serialization/: ccon.ts  instantiate-jit.ts  instantiate.ts
cocos/sorting/: sorting-layers.ts
cocos/spine/: index.jsb.ts  index.ts  skeleton-cache.ts  skeleton-data.ts  skeleton-system.ts  skeleton.ts
cocos/terrain/: terrain.ts
cocos/tiledmap/: tiled-layer.ts  tiled-map.ts  tiled-object-group.ts  tiled-tile.ts  tiled-types.ts  tiled-utils.ts
cocos/tween/: set-action.ts  tween-action.ts  tween-system.ts  tween.ts
cocos/ui/: button.ts  layout.ts  page-view-indicator.ts  page-view.ts  progress-bar.ts  scroll-bar.ts  scroll-view.ts  slider.ts  sub-context-view.ts  view.ts  widget-manager.ts  widget.ts
cocos/video/: video-player-impl-web.ts  video-player-impl.ts  video-player.ts
cocos/web-view/: web-view-impl-manager.ts  web-view-impl-web.ts  web-view.ts
editor/engine-features/: generate-schema.js  render-config.json  schema.json  types.ts
editor/inspector/: assets-footer.js  assets.js
exports/: affine-transform.ts  graphics.ts  mask.ts  physics-2d-box2d-jsb.ts  physics-2d-box2d-wasm.ts  physics-ammo.ts  physics-physx.ts  rich-text.ts  spine.ts  ui-skew.ts  vendor-google.ts
gulp/tasks/: engine.js
native/: .clang-tidy  CMakeLists.txt  external-config.json  gulpfile.js
native/cocos/editor-support/spine-wasm/: AtlasAttachmentLoaderExtension.cpp  AtlasAttachmentLoaderExtension.h  CMakeLists.txt  Vector2.cpp  mesh-type-define.h  spine-mesh-data.cpp  spine-mesh-data.h  spine-model.cpp  spine-model.h  spine-skeleton-instance.cpp  spine-skeleton-instance.h  spine-type-export.cpp  spine-wasm.cpp  spine-wasm.h  util-function.cpp  util-function.h  wasmSpineExtension.cpp  wasmSpineExtension.h
native/cocos/editor-support/spine-wasm/scripts/: CMakeLists.header.txt  generate_compile_commands_emscripten.sh
pal/: utils.ts
scripts/: fetch-ral.js
templates/harmonyos-next/: CMakeLists.txt  build-profile.json5
templates/harmonyos-next/AppScope/: app.json5
templates/harmonyos-next/entry/src/main/: module.json5
templates/harmonyos-next/entry/src/main/cpp/types/libcocos/: index.d.ts
templates/harmonyos-next/entry/src/main/ets/cocos/oh-adapter/: sys-ability-polyfill.js
templates/harmonyos-next/entry/src/main/ets/entryability/: EntryAbility.ets
templates/harmonyos-next/entry/src/main/ets/pages/: index.ets
tests/: constants-for-test.ts
(+741 files in other folders)
